icon and about me added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,35 @@
                 </div>
             </div>
         </section>
+        <section>
+            <!-- what i do section -->
+            <section class="what-i-do">
+                <h3 class="section-title">What I do</h3>
+                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="skill-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="skill-title">JS</p>
+                        <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima laboriosam, impedit ipsa reiciendis molestias aut.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="">
+                        <p class="skill-title">React</p>
+                        <p class="skill-description">Possimus voluptate non soluta odio itaque deleniti, architecto enim dolorum earum magni illum eos officiis!</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <p class="skill-title">Node JS</p>
+                        <p class="skill-description">Vitae culpa, modi veniam unde inventore consequatur vero eveniet autem maiores reprehenderit laboriosam molestias aliquid?</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <p class="skill-title">Mongo DB</p>
+                        <p class="skill-description">Ullam quod ad voluptatum autem voluptates necessitatibus nobis repellendus impedit a veritatis! Ut, nostrum eligendi!</p>
+                    </div>
+                </div>
+            </section>
+        </section>
 
     </main>
 
