Summary of resume added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             </section>
         </section>
 
+        <section class="resume">
+            <h3 class="section-title">A summary of my resume </h3>
+            <div class="resume-content">
+                
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
